js/parser/JJTParser.js
// Generated from JJTParser.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import JJTParserListener from './JJTParserListener.js';
import JJTParserVisitor from './JJTParserVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class JJTParser extends antlr4.Parser {

    static grammarFileName = "JJTParser.g4";
    static literalNames = [ null, "'${{'", "'{{'", null, "'}}'", null, null, 
                            null, null, null, null, null, null, null, null, 
                            "'['", null, null, null, null, "'{'" ];
    static symbolicNames = [ null, "OPENO", "OPENS", "TEXT", "CLOSE", "NOT", 
                             "PM", "MULDIVMOD", "OR", "AND", "MOD", "COMPARISON", 
                             "EQUALITY", "LPARENS", "RPARENS", "LBRACKET", 
                             "RBRACKET", "DOTS", "DOT", "COMMA", "LBRACE", 
                             "RBRACE", "COLON", "QUESTION", "NULL", "BAR", 
                             "IN", "BOOL", "IDENTIFIER", "STRING", "NUMBER", 
                             "WS", "I_WS" ];
    static ruleNames = [ "output", "text", "object_template", "spread_template", 
                         "string_template", "expression", "value", "element", 
                         "array", "object", "object_element", "spread" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = JJTParser.ruleNames;
        this.literalNames = JJTParser.literalNames;
        this.symbolicNames = JJTParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 5:
    	    		return this.expression_sempred(localctx, predIndex);
    	case 6:
    	    		return this.value_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 9);
    		case 1:
    			return this.precpred(this._ctx, 8);
    		case 2:
    			return this.precpred(this._ctx, 7);
    		case 3:
    			return this.precpred(this._ctx, 6);
    		case 4:
    			return this.precpred(this._ctx, 5);
    		case 5:
    			return this.precpred(this._ctx, 4);
    		case 6:
    			return this.precpred(this._ctx, 3);
    		case 7:
    			return this.precpred(this._ctx, 2);
    		case 8:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    value_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 9:
    			return this.precpred(this._ctx, 5);
    		case 10:
    			return this.precpred(this._ctx, 4);
    		case 11:
    			return this.precpred(this._ctx, 3);
    		case 12:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	output() {
	    let localctx = new OutputContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, JJTParser.RULE_output);
	    var _la = 0; // Token type
	    try {
	        this.state = 43;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 25;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===JJTParser.TEXT) {
	                this.state = 24;
	                this.text();
	            }

	            this.state = 36;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===JJTParser.OPENO || _la===JJTParser.OPENS) {
	                this.state = 29;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case JJTParser.OPENS:
	                    this.state = 27;
	                    this.string_template();
	                    break;
	                case JJTParser.OPENO:
	                    this.state = 28;
	                    this.object_template();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                }
	                this.state = 32;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===JJTParser.TEXT) {
	                    this.state = 31;
	                    this.text();
	                }

	                this.state = 38;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 39;
	            this.match(JJTParser.EOF);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 40;
	            this.spread_template();
	            this.state = 41;
	            this.match(JJTParser.EOF);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	text() {
	    let localctx = new TextContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, JJTParser.RULE_text);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 45;
	            localctx._TEXT = this.match(JJTParser.TEXT);
	            localctx.txt.push(localctx._TEXT);
	            this.state = 48; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===JJTParser.TEXT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object_template() {
	    let localctx = new Object_templateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, JJTParser.RULE_object_template);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        this.match(JJTParser.OPENO);
	        this.state = 51;
	        localctx.v = this.expression(0);
	        this.state = 52;
	        this.match(JJTParser.CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	spread_template() {
	    let localctx = new Spread_templateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, JJTParser.RULE_spread_template);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 54;
	        this.match(JJTParser.OPENO);
	        this.state = 55;
	        localctx.v = this.spread();
	        this.state = 56;
	        this.match(JJTParser.CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string_template() {
	    let localctx = new String_templateContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, JJTParser.RULE_string_template);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        this.match(JJTParser.OPENS);
	        this.state = 59;
	        localctx.v = this.expression(0);
	        this.state = 60;
	        this.match(JJTParser.CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 10;
	    this.enterRecursionRule(localctx, 10, JJTParser.RULE_expression, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 66;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JJTParser.LPARENS:
	        case JJTParser.LBRACKET:
	        case JJTParser.LBRACE:
	        case JJTParser.NULL:
	        case JJTParser.BOOL:
	        case JJTParser.IDENTIFIER:
	        case JJTParser.STRING:
	        case JJTParser.NUMBER:
	            localctx = new PassUpExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 63;
	            localctx.v = this.value(0);
	            break;
	        case JJTParser.NOT:
	        case JJTParser.PM:
	            localctx = new UnaryContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 64;
	            localctx.op = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===JJTParser.NOT || _la===JJTParser.PM)) {
	                localctx.op = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 65;
	            localctx.v = this.expression(10);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 100;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 98;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new BinaryOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.l = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 68;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 69;
	                    localctx.op = this.match(JJTParser.MULDIVMOD);
	                    this.state = 70;
	                    localctx.r = this.expression(10);
	                    break;

	                case 2:
	                    localctx = new BinaryOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.l = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 71;
	                    if (!( this.precpred(this._ctx, 8))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
	                    }
	                    this.state = 72;
	                    localctx.op = this.match(JJTParser.PM);
	                    this.state = 73;
	                    localctx.r = this.expression(9);
	                    break;

	                case 3:
	                    localctx = new BinaryOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.l = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 74;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 75;
	                    localctx.op = this.match(JJTParser.COMPARISON);
	                    this.state = 76;
	                    localctx.r = this.expression(8);
	                    break;

	                case 4:
	                    localctx = new BinaryOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.l = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 77;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 78;
	                    localctx.op = this.match(JJTParser.EQUALITY);
	                    this.state = 79;
	                    localctx.r = this.expression(7);
	                    break;

	                case 5:
	                    localctx = new BinaryOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.l = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 80;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 81;
	                    localctx.op = this.match(JJTParser.AND);
	                    this.state = 82;
	                    localctx.r = this.expression(6);
	                    break;

	                case 6:
	                    localctx = new BinaryOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.l = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 83;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 84;
	                    localctx.op = this.match(JJTParser.OR);
	                    this.state = 85;
	                    localctx.r = this.expression(5);
	                    break;

	                case 7:
	                    localctx = new BinaryOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.l = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 86;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 87;
	                    localctx.op = this.match(JJTParser.IN);
	                    this.state = 88;
	                    localctx.r = this.expression(4);
	                    break;

	                case 8:
	                    localctx = new ConditionalContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.cond = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 89;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 90;
	                    this.match(JJTParser.QUESTION);
	                    this.state = 91;
	                    localctx.t = this.expression(0);
	                    this.state = 92;
	                    this.match(JJTParser.COLON);
	                    this.state = 93;
	                    localctx.f = this.expression(2);
	                    break;

	                case 9:
	                    localctx = new BinaryOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    localctx.l = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_expression);
	                    this.state = 95;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 96;
	                    localctx.op = this.match(JJTParser.BAR);
	                    this.state = 97;
	                    localctx.r = this.expression(2);
	                    break;

	                } 
	            }
	            this.state = 102;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	value(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ValueContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 12;
	    this.enterRecursionRule(localctx, 12, JJTParser.RULE_value, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        localctx = new PassUpValueContext(this, localctx);
	        this._ctx = localctx;
	        _prevctx = localctx;

	        this.state = 104;
	        localctx.v = this.element();
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 139;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 137;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new FunctionCallContext(this, new ValueContext(this, _parentctx, _parentState));
	                    localctx.v = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_value);
	                    this.state = 106;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 107;
	                    this.match(JJTParser.LPARENS);
	                    this.state = 116;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JJTParser.NOT) | (1 << JJTParser.PM) | (1 << JJTParser.LPARENS) | (1 << JJTParser.LBRACKET) | (1 << JJTParser.LBRACE) | (1 << JJTParser.NULL) | (1 << JJTParser.BOOL) | (1 << JJTParser.IDENTIFIER) | (1 << JJTParser.STRING) | (1 << JJTParser.NUMBER))) !== 0)) {
	                        this.state = 108;
	                        localctx._expression = this.expression(0);
	                        localctx.args.push(localctx._expression);
	                        this.state = 113;
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                        while(_la===JJTParser.COMMA) {
	                            this.state = 109;
	                            this.match(JJTParser.COMMA);
	                            this.state = 110;
	                            localctx._expression = this.expression(0);
	                            localctx.args.push(localctx._expression);
	                            this.state = 115;
	                            this._errHandler.sync(this);
	                            _la = this._input.LA(1);
	                        }
	                    }

	                    this.state = 118;
	                    this.match(JJTParser.RPARENS);
	                    break;

	                case 2:
	                    localctx = new GetPropertyContext(this, new ValueContext(this, _parentctx, _parentState));
	                    localctx.v = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_value);
	                    this.state = 119;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 120;
	                    this.match(JJTParser.DOT);
	                    this.state = 121;
	                    localctx.p = this.match(JJTParser.IDENTIFIER);
	                    break;

	                case 3:
	                    localctx = new ArrayAccessContext(this, new ValueContext(this, _parentctx, _parentState));
	                    localctx.v = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_value);
	                    this.state = 122;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 123;
	                    this.match(JJTParser.LBRACKET);
	                    this.state = 124;
	                    localctx.idx = this.expression(0);
	                    this.state = 125;
	                    this.match(JJTParser.RBRACKET);
	                    break;

	                case 4:
	                    localctx = new SliceContext(this, new ValueContext(this, _parentctx, _parentState));
	                    localctx.v = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, JJTParser.RULE_value);
	                    this.state = 127;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 128;
	                    this.match(JJTParser.LBRACKET);
	                    this.state = 130;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JJTParser.NOT) | (1 << JJTParser.PM) | (1 << JJTParser.LPARENS) | (1 << JJTParser.LBRACKET) | (1 << JJTParser.LBRACE) | (1 << JJTParser.NULL) | (1 << JJTParser.BOOL) | (1 << JJTParser.IDENTIFIER) | (1 << JJTParser.STRING) | (1 << JJTParser.NUMBER))) !== 0)) {
	                        this.state = 129;
	                        localctx.s1 = this.expression(0);
	                    }

	                    this.state = 132;
	                    this.match(JJTParser.COLON);
	                    this.state = 134;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JJTParser.NOT) | (1 << JJTParser.PM) | (1 << JJTParser.LPARENS) | (1 << JJTParser.LBRACKET) | (1 << JJTParser.LBRACE) | (1 << JJTParser.NULL) | (1 << JJTParser.BOOL) | (1 << JJTParser.IDENTIFIER) | (1 << JJTParser.STRING) | (1 << JJTParser.NUMBER))) !== 0)) {
	                        this.state = 133;
	                        localctx.s2 = this.expression(0);
	                    }

	                    this.state = 136;
	                    this.match(JJTParser.RBRACKET);
	                    break;

	                } 
	            }
	            this.state = 141;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	element() {
	    let localctx = new ElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, JJTParser.RULE_element);
	    try {
	        this.state = 153;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JJTParser.NUMBER:
	            localctx = new NumberContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 142;
	            this.match(JJTParser.NUMBER);
	            break;
	        case JJTParser.STRING:
	            localctx = new StringContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 143;
	            this.match(JJTParser.STRING);
	            break;
	        case JJTParser.BOOL:
	            localctx = new BoolContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 144;
	            this.match(JJTParser.BOOL);
	            break;
	        case JJTParser.NULL:
	            localctx = new NullContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 145;
	            this.match(JJTParser.NULL);
	            break;
	        case JJTParser.IDENTIFIER:
	            localctx = new IdentifierContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 146;
	            this.match(JJTParser.IDENTIFIER);
	            break;
	        case JJTParser.LBRACKET:
	            localctx = new ArrayElementContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 147;
	            localctx.v = this.array();
	            break;
	        case JJTParser.LBRACE:
	            localctx = new ObjectElementContext(this, localctx);
	            this.enterOuterAlt(localctx, 7);
	            this.state = 148;
	            localctx.v = this.object();
	            break;
	        case JJTParser.LPARENS:
	            localctx = new ExpElementContext(this, localctx);
	            this.enterOuterAlt(localctx, 8);
	            this.state = 149;
	            this.match(JJTParser.LPARENS);
	            this.state = 150;
	            localctx.v = this.expression(0);
	            this.state = 151;
	            this.match(JJTParser.RPARENS);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	array() {
	    let localctx = new ArrayContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, JJTParser.RULE_array);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.match(JJTParser.LBRACKET);
	        this.state = 158;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case JJTParser.DOTS:
	            this.state = 156;
	            this.spread();
	            break;
	        case JJTParser.NOT:
	        case JJTParser.PM:
	        case JJTParser.LPARENS:
	        case JJTParser.LBRACKET:
	        case JJTParser.LBRACE:
	        case JJTParser.NULL:
	        case JJTParser.BOOL:
	        case JJTParser.IDENTIFIER:
	        case JJTParser.STRING:
	        case JJTParser.NUMBER:
	            this.state = 157;
	            this.expression(0);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 167;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===JJTParser.COMMA) {
	            this.state = 160;
	            this.match(JJTParser.COMMA);
	            this.state = 163;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case JJTParser.DOTS:
	                this.state = 161;
	                this.spread();
	                break;
	            case JJTParser.NOT:
	            case JJTParser.PM:
	            case JJTParser.LPARENS:
	            case JJTParser.LBRACKET:
	            case JJTParser.LBRACE:
	            case JJTParser.NULL:
	            case JJTParser.BOOL:
	            case JJTParser.IDENTIFIER:
	            case JJTParser.STRING:
	            case JJTParser.NUMBER:
	                this.state = 162;
	                this.expression(0);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 169;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 170;
	        this.match(JJTParser.RBRACKET);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object() {
	    let localctx = new ObjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, JJTParser.RULE_object);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 172;
	        this.match(JJTParser.LBRACE);
	        this.state = 181;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << JJTParser.DOTS) | (1 << JJTParser.IDENTIFIER) | (1 << JJTParser.STRING))) !== 0)) {
	            this.state = 173;
	            this.object_element();
	            this.state = 178;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===JJTParser.COMMA) {
	                this.state = 174;
	                this.match(JJTParser.COMMA);
	                this.state = 175;
	                this.object_element();
	                this.state = 180;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 183;
	        this.match(JJTParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


